# SlicerAutoscoperM

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  SuperBuild.cmake  pyproject.toml
AutoscoperM/: AutoscoperM.py  CMakeLists.txt
AutoscoperM/AutoscoperMLib/: ErrorUtils.py  IO.py  RadiographGeneration.py  SubVolumeExtraction.py
AutoscoperM/Resources/UI/: AutoscoperM.ui
AutoscoperMGenerateTiffStacks/: AutoscoperMGenerateTiffStacks.py  CMakeLists.txt
AutoscoperMGenerateTiffStacks/Resources/UI/: AutoscoperMGenerateTiffStacks.ui
AutoscoperMStub/: AutoscoperMStub.py  CMakeLists.txt
CalculateDataIntensityDensity/: CalculateDataIntensityDensity.py
Hierarchical3DRegistration/: Hierarchical3DRegistration.py
Hierarchical3DRegistration/Hierarchical3DRegistrationLib/: TreeNode.py
OpenCLDistExp/: CMakeLists.txt  OpenCLDistExp.cxx  OpenCLDistExp.xml
SubVolume3DRegistration/SubVolReg/: CMakeLists.txt
SubVolume3DRegistration/SubVolReg/SubvolROIfromModel/: CMakeLists.txt  SubvolROIfromModel.py
SubVolume3DRegistration/SubVolReg/SubvolROIfromModel/Resources/UI/: SubvolROIfromModel.ui
SuperBuild/: External_Autoscoper.cmake
Tracking3D/: CMakeLists.txt  Tracking3D.py
Tracking3D/Resources/ParameterFiles/: rigid.txt
Tracking3D/Tracking3DLib/: TreeNode.py
VirtualRadiographGeneration/: VirtualRadiographGeneration.py
calculateDataIntensityDensity/: CMakeLists.txt  calculateDataIntensityDensity.py  calculateDataIntensityDensity.xml
virtualRadiographGeneration/: CMakeLists.txt  virtualRadiographGeneration.py  virtualRadiographGeneration.xml
(+2 files in other folders)
